# mpi_distributed_sum

./: CMakeLists.txt  main.cpp
